Fixed padding on mobile sidemenu

--- a/css/project-page.css
+++ b/css/project-page.css
@@ -102,7 +102,7 @@
   width: 100%;
   background: white;
   z-index: 1;
-  padding: 20px 30px;
+  padding: 20px 15px;
   box-shadow: rgba(84, 84, 84, 0.2) 0px 0px 10px;
   height: 85px;
   left: 0;
@@ -184,6 +184,7 @@
   #sideMenu {
     width: 50%;
     left: 25%;
+    padding: 20px 30px;
   }
   #sideMenu a:focus {
     text-decoration: none;
